--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,11 @@
 body{
     font-family:'Roboto', sans-serif;
+    line-height: 130%;
 }
 
+h1 {
+    font-size:2rem;
+}
 
 h3 {
     font-weight: 700;
@@ -12,4 +16,19 @@ h2{
     @include tablette-only {
         font-size: 1.2rem;
     }
+}
+
+.logo{
+    font-family:'Shrikhand', 'Robot', sans-serif;
+    font-size: 2rem;
+}
+
+.card-container__heading h1{
+font-family:'Shrikhand', 'Robot', sans-serif;
+font-size: 1.8rem;
+}
+
+.menu__heading{
+    font-size: 1.2rem;
+    font-weight: 300;
 }
