--- a/sass/components/_button-like.scss
+++ b/sass/components/_button-like.scss
@@ -5,9 +5,6 @@
     width: 2rem;
     height: 2rem;
     font-size: 1.5rem;
-    position: absolute;
-    right: 1.29rem;
-    bottom: 1.1rem;
     border: none;
     background-color: white;
     border-radius: 50%;
@@ -16,15 +13,12 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     cursor: grab;
-
-
-    &__after {
+    
+            &__after 
+{
         border: none;
         width: 2rem;
         height: 2rem;
-        position: fixed;
-        right: 1.31rem;
-        bottom: 1rem;
         transform: scale(0);
         -webkit-transform: scale(0);
         -moz-transform: scale(0);
