-modifications dans index.html : div au lieu de h1 pour le logo, h1 au lieu de h2 pour "présentation-heading", création d'une div "container-restaurant_cards pour englober toutes les cartes uniquement et permettre de les disposer avec flex, et mise en forme du document; -modifications de menu_the-delite_senses.html : mise en forme du document et déplacement de la div du check à l'intérieur dans la div "menu_selection" en vu des effets à réaliser; -modifications de main.scss: changement des noms des fichiers button, loader et replacement de nav avec les fichiers layout; -suppression dans base.scss du h2 placé dans typography; -dans typography.scss : diminution des fonts-size h1 et h2 et mise en forme du document; -dans button-new.scss : léger décalage du bouton vers la droite; -pour les fichiers bouton  : modification du nom des fichiers (undersore au lieu du tiret); -dans header.scss : changement du selecteur logo par haeder; -dans home_page.scss : modification de la couleur du background des container, modification des propriétés flex pour tablette, ajout du selecteur container-restaurant__cards avec ses propriétés largeur, hauteur, flex mobile et tablette, modification des largeurs, hauteur et du margin pour tablette  du sélecteur "container-restaurant__heading", ajout des propriétés width et margin dans la version tablette du selecteur "restaurant_card", suppression des sélecteurs "__footer h3" et "__icon-heart" avec leurs propriétés (devenus inutiles suites aux changements dans les autres fichiers) -dans menu.scss : ".header-menu" complété, ajout du sélecteur "details" et de ses propriétés (margin, flex direction et space between, width et height) et mise en forme du document; -dans variables.scss : ajout de la variable background container pour la couleur des fonds en version mobile notamment.

--- a/main.css
+++ b/main.css
@@ -49,31 +49,27 @@ a {
   color: black;
 }
 
-h2 {
-  font-weight: 700;
-  font-size: 1.2rem;
-}
-
 body {
   font-family: "Roboto", sans-serif;
   line-height: 130%;
 }
 
 h1 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-weight: 700;
+  font-size: 1.5rem;
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 @media all and (min-width: 767px) {
   h2 {
     font-size: 1.2rem;
   }
+}
+
+h3 {
+  font-weight: 700;
 }
 
 .logo {
@@ -213,7 +209,7 @@ h2 {
 .btn {
   position: absolute;
   top: 0.5rem;
-  right: 2rem;
+  right: 1rem;
 }
 .btn__new {
   color: #278870;
@@ -292,15 +288,82 @@ h2 {
     z-index: -1;
   }
 }
-.logo {
+header {
   text-align: center;
   margin: 1rem 1rem 1rem 1rem;
   padding: 1rem;
 }
 @media all and (min-width: 767px) {
-  .logo {
+  header {
     text-align: start;
   }
+}
+
+footer {
+  width: auto;
+  height: auto;
+  background-color: rgba(65, 60, 60, 0.863);
+  padding: 1rem 0 1rem 0;
+}
+@media all and (min-width: 767px) {
+  footer {
+    display: flex;
+    justify-content: space-around;
+    height: auto;
+  }
+}
+
+.nav {
+  color: white;
+  margin: 1rem 1rem 1rem 1rem;
+  line-height: 2rem;
+}
+@media all and (min-width: 767px) {
+  .nav__container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+}
+.nav__logo {
+  margin: 1rem 0 1rem 0;
+  font-weight: 300;
+  font-family: "Shrikhand", "Roboto", sans-serif;
+}
+@media all and (min-width: 767px) {
+  .nav__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.nav__link-icon {
+  display: inline-block;
+  height: 1rem;
+  position: relative;
+  right: 0.5rem;
+  line-height: 1rem;
+  padding: 0 1rem 0 1rem;
+}
+.nav__link-icon .fa-utensils {
+  position: relative;
+  right: 0.5rem;
+}
+.nav__link-icon .fa-handshake-angle {
+  position: relative;
+  right: 0.5rem;
+}
+.nav__link--color {
+  color: white;
+}
+@media all and (min-width: 767px) {
+  .nav__link--color {
+    margin: 1rem 1rem 1rem 1rem;
+  }
+}
+.nav__link--color:hover {
+  color: #FF79DA;
 }
 
 .home-main-container {
@@ -328,7 +391,7 @@ h2 {
   text-align: center;
   align-items: center;
   margin-bottom: 5rem;
-  background-color: rgb(252, 246, 246);
+  background-color: #f2f2f2;
 }
 @media all and (min-width: 767px) {
   .presentation {
@@ -346,7 +409,7 @@ h2 {
   padding: 1rem;
   font-weight: 700;
   box-shadow: inset 0 0.2rem 0.2rem rgba(7, 15, 56, 0.07);
-  background-color: rgba(7, 15, 56, 0.03);
+  background-color: #ededed;
 }
 .presentation__heading {
   font-weight: 900;
@@ -472,31 +535,46 @@ h2 {
   width: auto;
   height: auto;
   gap: 1rem;
-  background-color: rgb(252, 246, 246);
+  background-color: #f2f2f2;
   padding-bottom: 4rem;
 }
 @media all and (min-width: 767px) {
   .container-restaurant {
-    width: 65%;
     flex-wrap: wrap;
-    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 65%;
   }
 }
 @media all and (min-width: 992px) {
   .container-restaurant {
     width: 100%;
-    flex-wrap: wrap;
     flex-direction: row;
   }
 }
+.container-restaurant__cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: auto;
+  height: auto;
+}
+@media all and (min-width: 767px) {
+  .container-restaurant__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+}
 .container-restaurant__heading {
-  width: 100%;
+  width: auto;
   height: auto;
   padding: 3rem 1rem 0 1rem;
+  margin: 1rem 1rem 1rem 1rem;
 }
 @media all and (min-width: 767px) {
   .container-restaurant__heading {
-    margin-left: 4rem;
+    margin: 0 0 0 4rem;
   }
 }
 @media all and (min-width: 992px) {
@@ -561,6 +639,8 @@ h2 {
 }
 @media all and (min-width: 992px) {
   .restaurant__card {
+    margin: 0;
+    width: auto;
     height: 350px;
   }
 }
@@ -590,7 +670,7 @@ h2 {
   -o-border-radius: 20px 20px 0 0;
 }
 .restaurant__footer {
-  width: 100%;
+  width: auto;
   height: auto;
   padding: 0.5rem;
   border-radius: 0 0 20px 20px;
@@ -598,15 +678,6 @@ h2 {
   -moz-border-radius: 0 0 20px 20px;
   -ms-border-radius: 0 0 20px 20px;
   -o-border-radius: 0 0 20px 20px;
-}
-.restaurant__footer h3,
-.restaurant p {
-  padding: 0.2rem 0 0.2rem 1rem;
-}
-.restaurant__icon-heart:hover .fa-regular {
-  background-color: #9356DC;
-  filter: brightness(1.5);
-  -webkit-filter: brightness(1.5);
 }
 
 .restaurant-like {
@@ -621,12 +692,21 @@ h2 {
 }
 
 .header-menu {
+  width: auto;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .header-menu__return {
+  width: auto;
+  position: absolute;
+  left: 0rem;
   margin: 2rem;
   font-size: 1.5rem;
+}
+.header-menu__return.logo {
+  position: relative;
+  width: auto;
 }
 
 .main-container {
@@ -706,84 +786,23 @@ h2 {
   -o-border-radius: 20px;
   cursor: pointer;
 }
+.menu__details {
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+  margin: 1rem 1rem 1rem 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .menu__check {
   z-index: 2;
   width: 4rem;
   height: 4rem;
   display: flex;
   align-items: center;
-}
-.menu__details {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-footer {
-  width: auto;
-  height: auto;
-  background-color: rgba(65, 60, 60, 0.863);
-  padding: 1rem 0 1rem 0;
-}
-@media all and (min-width: 767px) {
-  footer {
-    display: flex;
-    justify-content: space-around;
-    height: auto;
-  }
-}
-
-.nav {
-  color: white;
-  margin: 1rem 1rem 1rem 1rem;
-  line-height: 2rem;
-}
-@media all and (min-width: 767px) {
-  .nav__container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-}
-.nav__logo {
-  margin: 1rem 0 1rem 0;
-  font-weight: 300;
-  font-family: "Shrikhand", "Roboto", sans-serif;
-}
-@media all and (min-width: 767px) {
-  .nav__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.nav__link-icon {
-  display: inline-block;
-  height: 1rem;
-  position: relative;
-  right: 0.5rem;
-  line-height: 1rem;
-  padding: 0 1rem 0 1rem;
-}
-.nav__link-icon .fa-utensils {
-  position: relative;
-  right: 0.5rem;
-}
-.nav__link-icon .fa-handshake-angle {
-  position: relative;
-  right: 0.5rem;
-}
-.nav__link--color {
-  color: white;
-}
-@media all and (min-width: 767px) {
-  .nav__link--color {
-    margin: 1rem 1rem 1rem 1rem;
-  }
-}
-.nav__link--color:hover {
-  color: #FF79DA;
 }
 
 /*# sourceMappingURL=main.css.map */
