--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,3 +9,4 @@ $colour-shadow: rgba(202,198,198,1);
 $margin-elements : 1rem 1rem 1rem 1rem;
 $border-selector: 0.938rem 0.938rem 0.938rem 0.938rem;
 $border-card : 1.25rem 1.25rem 1.25rem 1.25rem;
+$background-container:  #f2f2f2;
