--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,19 +4,22 @@ body{
 }
 
 h1 {
-    font-size:2rem;
+    font-size:1.5rem;
+}
+
+h2{
+    font-size: 1.5rem;
+    font-weight: 700;
+
+    @include tablette-only {
+        font-size: 1.2rem;
+    }
 }
 
 h3 {
     font-weight: 700;
 }
 
-h2{
-    font-size: 1.6rem;
-    @include tablette-only {
-        font-size: 1.2rem;
-    }
-}
 
 .logo{
     font-family:'Shrikhand', 'Robot', sans-serif;
