--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,10 +1,20 @@
 .header-menu {
+  width:auto;
   display: flex;
   align-items: center;
+  justify-content: center;
 
   &__return {
+    width:auto;
+    position:absolute;
+    left: 0rem;
     margin: 2rem;
     font-size: 1.5rem;
+  }
+
+  &__return.logo{
+    position:relative;
+    width: auto;
   }
 }
 
@@ -15,28 +25,28 @@
   &__img {
     width: 100%;
     height: auto;
-     
+
     z-index: -1;
-    position :absolute;
+    position: absolute;
   }
 
 }
 
 .card-container {
-position:relative;
-top:14rem;
+  position: relative;
+  top: 14rem;
   width: 100%;
   height: auto;
- padding-top:1rem;
- background-color: rgb(252, 246, 246);
-  border-radius: 25px 25px 0 0 ;
-  -webkit-border-radius: 25px 25px 0 0 ;
-  -moz-border-radius: 25px 25px 0 0 ;
-  -ms-border-radius: 25px 25px 0 0 ;
-  -o-border-radius: 25px 25px 0 0 ;
+  padding-top: 1rem;
+  background-color: rgb(252, 246, 246);
+  border-radius: 25px 25px 0 0;
+  -webkit-border-radius: 25px 25px 0 0;
+  -moz-border-radius: 25px 25px 0 0;
+  -ms-border-radius: 25px 25px 0 0;
+  -o-border-radius: 25px 25px 0 0;
 
-  &__heading
-{line-height: 3rem;
+  &__heading {
+    line-height: 3rem;
     width: auto;
     height: auto;
     position: relative;
@@ -46,17 +56,17 @@ top:14rem;
   &__heading .restaurant-like {
 
     position: absolute;
-    top:0.5rem;
+    top: 0.5rem;
     right: 0.5rem;
     background-color: rgb(252, 246, 246);
   }
 
   &__heading .restaurant-like__after {
     position: absolute;
- top : 0.6rem;
-right: 0.5rem;
-background-color: rgb(252, 246, 246);
- 
+    top: 0.6rem;
+    right: 0.5rem;
+    background-color: rgb(252, 246, 246);
+
   }
 
 }
@@ -66,50 +76,57 @@ background-color: rgb(252, 246, 246);
   height: auto;
   display: flex;
   flex-direction: column;
-  align-items:flex-start;
+  align-items: flex-start;
 
-  &__heading{
+  &__heading {
     margin: $margin-elements;
   }
 
-  &__container{
-    width:100%;
-    height:auto;
-    margin:$margin-elements;
-    display:flex;
+  &__container {
+    width: 100%;
+    height: auto;
+    margin: $margin-elements;
+    display: flex;
     flex-direction: row;
 
     align-items: center;
   }
 
-  &__selection{
+  &__selection {
     z-index: 1;
-    width:100%;
-    height:auto;
+    width: 100%;
+    height: auto;
     padding: 1rem;
     position: relative;
     @include initial-shadow-element;
     border: solid 1;
-    border-radius: 20px ;
-    -webkit-border-radius: 20px ;
-    -moz-border-radius: 20px ;
-    -ms-border-radius: 20px ;
-    -o-border-radius: 20px ;
-
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
     cursor: pointer;
-}
-
-  &__check{
-    z-index: 2;
-    width: 4rem;
-    height:4rem;
+  }
+ &__details {
+    width: auto;
     display: flex;
+    justify-content: space-between;
+
+    width: 100%;
+    height: auto;
+    margin: $margin-elements;
+    display: flex;
+    flex-direction: row;
+
     align-items: center;
   }
 
-  &__details{
-    width:100%;
+  &__check {
+    z-index: 2;
+    width: 4rem;
+    height: 4rem;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
   }
+ 
 }
