-modifications dans index.html : div au lieu de h1 pour le logo, h1 au lieu de h2 pour "présentation-heading", création d'une div "container-restaurant_cards pour englober toutes les cartes et permettre de les disposer avec flex, et mise en forme du document;     -modifications de menu_the-delite_senses.html : mise en forme du document et déplacement de la div du check à l'intérieur dans la div "menu_selection" en vu des effets à réaliser;     -modifications de main.scss: changement des noms des fichiers button, loader et replacement de nav avec les fichiers layout;     -suppression dans base.scss du h2 placé dans typography;     -dans typography.scss : diminution des fonts-size h1 et h2 et mise en forme du document;     -dans button-new.scss : léger décalage du bouton vers la droite;     -pour les fichiers bouton  : modification du nom des fichiers (undersore au lieu du tiret);     -dans header.scss : changement du selecteur logo par haeder;     -dans home_page.scss : modification de la couleur du background des container, modification des propriétés flex pour tablette, ajout du selecteur container-restaurant__cards avec ses propriétés largeur, hauteur, flex mobile et tablette, modification des largeurs, hauteur et du margin pour tablette  du sélecteur "container-restaurant__heading", ajout des propriétés width et margin dans la version tablette du selecteur "restaurant_card", suppression des sélecteurs "__footer h3" et "__icon-heart" avec leurs propriétés (devenus inutiles suites aux changements dans les autres fichiers)     -dans menu.scss : ".header-menu" complété, ajout du sélecteur "details" et de ses propriétés (margin, flex direction et space between, width et height) et mise en forme du document;     -dans variables.scss : ajout de la variable background container pour la couleur des fonds en version mobile notamment.

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -2,6 +2,18 @@
     box-shadow: $size $blur-effect $colour;
 }
 
+
+$breakpoints-small-mobile: (
+    mobile: 350px
+);
+
+@mixin small-mobile-only {
+    @media  all and (max-width: map-get($breakpoints-small-mobile, small-mobile)) {
+        @content;
+    }
+}
+
+
 $breakpoints-tablette: (
     tablette: 767px
 );
