--- a/main.css
+++ b/main.css
@@ -62,13 +62,9 @@ h2 {
   font-size: 1.5rem;
   font-weight: 700;
 }
-@media all and (min-width: 767px) {
-  h2 {
-    font-size: 1.2rem;
-  }
-}
 
 h3 {
+  font-size: 1.1rem;
   font-weight: 700;
 }
 
@@ -76,10 +72,20 @@ h3 {
   font-family: "Shrikhand", "Robot", sans-serif;
   font-size: 2rem;
 }
+@media all and (max-width: ) {
+  .logo {
+    font-size: 1.3rem;
+  }
+}
 
-.card-container__heading h1 {
+.main-container__heading h1 {
   font-family: "Shrikhand", "Robot", sans-serif;
   font-size: 1.8rem;
+}
+@media all and (max-width: ) {
+  .main-container__heading h1 {
+    font-size: 1.3rem;
+  }
 }
 
 .menu__heading {
@@ -103,7 +109,7 @@ h3 {
   -ms-border-radius: 45px 45px;
   -o-border-radius: 45px 45px;
   border: none;
-  background: linear-gradient(175deg, #FF79DA, #9356DC 95%);
+  background: linear-gradient(to bottom, #FF79DA, #9356DC 95%);
   box-shadow: 0.5rem 0.2rem 1rem rgb(202, 198, 198);
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -434,7 +440,7 @@ footer {
     flex-wrap: wrap;
     flex-direction: row;
     margin: 0;
-    padding: 1rem;
+    padding: 1rem 1rem 5rem 1rem;
     background-color: #FF79DA;
   }
 }
@@ -564,6 +570,7 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
+    padding: 3.875rem 0 3.875rem 0;
   }
 }
 .container-restaurant__heading {
@@ -574,7 +581,7 @@ footer {
 }
 @media all and (min-width: 767px) {
   .container-restaurant__heading {
-    margin: 0 0 0 4rem;
+    margin: 0;
   }
 }
 @media all and (min-width: 992px) {
@@ -602,13 +609,15 @@ footer {
 @media all and (min-width: 767px) {
   .restaurant {
     align-items: flex-end;
-    width: 40%;
+    width: 45%;
+    margin: 0.2rem;
   }
 }
 @media all and (min-width: 992px) {
   .restaurant {
     width: 40%;
     height: 350px;
+    margin: 1rem;
   }
 }
 .restaurant:hover {
@@ -639,9 +648,9 @@ footer {
 }
 @media all and (min-width: 992px) {
   .restaurant__card {
-    margin: 0;
     width: auto;
     height: 350px;
+    margin: 0;
   }
 }
 .restaurant__container-img {
@@ -693,6 +702,7 @@ footer {
 
 .header-menu {
   width: auto;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -710,22 +720,13 @@ footer {
 }
 
 .main-container {
-  width: 100%;
-  height: auto;
-}
-.main-container__img {
-  width: 100%;
-  height: auto;
-  z-index: -1;
-  position: absolute;
-}
-
-.card-container {
+  display: flex;
+  flex-direction: column;
   position: relative;
   top: 14rem;
   width: 100%;
   height: auto;
-  padding-top: 1rem;
+  padding-bottom: 13rem;
   background-color: rgb(252, 246, 246);
   border-radius: 25px 25px 0 0;
   -webkit-border-radius: 25px 25px 0 0;
@@ -733,76 +734,192 @@ footer {
   -ms-border-radius: 25px 25px 0 0;
   -o-border-radius: 25px 25px 0 0;
 }
-.card-container__heading {
+@media all and (max-width: ) {
+  .main-container {
+    top: 12rem;
+  }
+}
+.main-container__img {
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+  min-height: 15rem;
+  position: absolute;
+}
+.main-container__heading {
   line-height: 3rem;
   width: auto;
   height: auto;
   position: relative;
   margin: 1rem 1rem 1rem 1rem;
+  padding-right: 3rem;
 }
-.card-container__heading .restaurant-like {
+.main-container__heading .restaurant-like {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
   background-color: rgb(252, 246, 246);
 }
-.card-container__heading .restaurant-like__after {
+.main-container__heading .restaurant-like__after {
   position: absolute;
-  top: 0.6rem;
+  top: 0.65rem;
   right: 0.5rem;
   background-color: rgb(252, 246, 246);
 }
 
 .menu {
-  width: 100%;
+  width: auto;
   height: auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  margin: 1rem 1rem 1rem 1rem;
+}
+.menu__title-container {
+  margin: 1rem 0rem 1rem 0rem;
 }
 .menu__heading {
-  margin: 1rem 1rem 1rem 1rem;
+  padding-bottom: 0.5rem;
 }
-.menu__container {
-  width: 100%;
-  height: auto;
-  margin: 1rem 1rem 1rem 1rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.menu__underline {
+  width: 3rem;
+  border-bottom: solid 0.3rem #99E2D0;
 }
 .menu__selection {
-  z-index: 1;
-  width: 100%;
-  height: auto;
-  padding: 1rem;
-  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  height: 5rem;
+  padding: 0;
+  margin-bottom: 1rem;
   box-shadow: 0.5rem 0.2rem 1rem rgb(202, 198, 198);
-  border: solid 1;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+  background-color: white;
   cursor: pointer;
+  overflow: hidden;
 }
-.menu__details {
-  width: auto;
+.menu__container-selection {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-evenly;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-right: 4rem;
+  border-radius: 0 10px 10px 0;
+  -webkit-border-radius: 0 10px 10px 0;
+  -moz-border-radius: 0 10px 10px 0;
+  -ms-border-radius: 0 10px 10px 0;
+  -o-border-radius: 0 10px 10px 0;
+  transition: padding-right 400ms;
+  -webkit-transition: padding-right 400ms;
+  -moz-transition: padding-right 400ms;
+  -ms-transition: padding-right 400ms;
+  -o-transition: padding-right 400ms;
+}
+.menu__name {
   width: 100%;
   height: auto;
-  margin: 1rem 1rem 1rem 1rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  padding-left: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu__details {
+  width: 100%;
+  height: auto;
+  padding-left: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu__price {
+  display: inline-block;
+  position: absolute;
+  right: 2rem;
+  bottom: 1rem;
+  width: 1rem;
+  height: 1rem;
+  transition: transform 500ms ease-in-out;
+  -webkit-transition: transform 500ms ease-in-out;
+  -moz-transition: transform 500ms ease-in-out;
+  -ms-transition: transform 500ms ease-in-out;
+  -o-transition: transform 500ms ease-in-out;
 }
 .menu__check {
-  z-index: 2;
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 100%;
+  position: absolute;
+  right: -0.1rem;
+  background-color: #99E2D0;
+  border: none;
+  transform-origin: right;
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  -moz-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  -o-transform: scaleX(0);
+  transition: transform 500ms ease-in-out;
+  -webkit-transition: transform 500ms ease-in-out;
+  -moz-transition: transform 500ms ease-in-out;
+  -ms-transition: transform 500ms ease-in-out;
+  -o-transition: transform 500ms ease-in-out;
+}
+.menu__selection:hover .menu__price {
+  transform: translate(-5rem);
+  -webkit-transform: translate(-5rem);
+  -moz-transform: translate(-5rem);
+  -ms-transform: translate(-5rem);
+  -o-transform: translate(-5rem);
+}
+.menu__selection:hover .menu__container-selection {
+  padding-right: 10rem;
+}
+.menu__selection:hover .menu__check {
+  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+  -moz-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  -o-transform: scaleX(1);
+}
+.menu .fa-circle-check {
+  display: inline-block;
   display: flex;
   align-items: center;
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 2rem;
+  transform: rotate 0;
+  -webkit-transform: rotate 0;
+  -moz-transform: rotate 0;
+  -ms-transform: rotate 0;
+  -o-transform: rotate 0;
+  transition: transform 500ms ease-in-out;
+  -webkit-transition: transform 500ms ease-in-out;
+  -moz-transition: transform 500ms ease-in-out;
+  -ms-transition: transform 500ms ease-in-out;
+  -o-transition: transform 500ms ease-in-out;
+  color: white;
+}
+.menu .menu__selection:hover .fa-circle-check {
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  position: relative;
 }
 
 /*# sourceMappingURL=main.css.map */
