--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,43 +1,33 @@
 .header-menu {
-  width:auto;
+  width: auto;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
 
   &__return {
-    width:auto;
-    position:absolute;
+    width: auto;
+    position: absolute;
     left: 0rem;
     margin: 2rem;
     font-size: 1.5rem;
   }
 
-  &__return.logo{
-    position:relative;
+  &__return.logo {
+    position: relative;
     width: auto;
   }
+
 }
 
 .main-container {
-  width: 100%;
-  height: auto;
-
-  &__img {
-    width: 100%;
-    height: auto;
-
-    z-index: -1;
-    position: absolute;
-  }
-
-}
-
-.card-container {
+  display: flex;
+  flex-direction: column;
   position: relative;
   top: 14rem;
   width: 100%;
   height: auto;
-  padding-top: 1rem;
+  padding-bottom: 13rem;
   background-color: rgb(252, 246, 246);
   border-radius: 25px 25px 0 0;
   -webkit-border-radius: 25px 25px 0 0;
@@ -45,16 +35,28 @@
   -ms-border-radius: 25px 25px 0 0;
   -o-border-radius: 25px 25px 0 0;
 
+  @include small-mobile-only {
+    top: 12rem;
+  }
+
+  &__img {
+    width: 100%;
+    height: auto;
+    object-fit: fill;
+    min-height: 15rem;
+    position: absolute;
+  }
+
   &__heading {
     line-height: 3rem;
     width: auto;
     height: auto;
     position: relative;
     margin: $margin-elements;
+    padding-right: 3rem;
   }
 
   &__heading .restaurant-like {
-
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
@@ -63,70 +65,178 @@
 
   &__heading .restaurant-like__after {
     position: absolute;
-    top: 0.6rem;
+    top: 0.65rem;
     right: 0.5rem;
     background-color: rgb(252, 246, 246);
-
   }
-
 }
 
 .menu {
-  width: 100%;
+  width: auto;
   height: auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  margin: $margin-elements;
 
-  &__heading {
-    margin: $margin-elements;
+  &__title-container {
+    margin: 1rem 0rem 1rem 0rem;
   }
 
-  &__container {
-    width: 100%;
-    height: auto;
-    margin: $margin-elements;
-    display: flex;
-    flex-direction: row;
+  &__heading {
+    padding-bottom: 0.5rem;
+  }
 
-    align-items: center;
+  &__underline {
+    width: 3rem;
+    border-bottom: solid 0.3rem $colour-tertiary;
   }
 
   &__selection {
-    z-index: 1;
-    width: 100%;
-    height: auto;
-    padding: 1rem;
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    height: 5rem;
+    padding: 0;
+    margin-bottom: 1rem;
     @include initial-shadow-element;
-    border: solid 1;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    background-color: white;
     cursor: pointer;
+    overflow: hidden;
   }
- &__details {
-    width: auto;
-    display: flex;
-    justify-content: space-between;
 
+  &__container-selection {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-right: 4rem;
+    border-radius: 0 10px 10px 0;
+    -webkit-border-radius: 0 10px 10px 0;
+    -moz-border-radius: 0 10px 10px 0;
+    -ms-border-radius: 0 10px 10px 0;
+    -o-border-radius: 0 10px 10px 0;
+    transition: padding-right 400ms;
+    -webkit-transition: padding-right 400ms;
+    -moz-transition: padding-right 400ms;
+    -ms-transition: padding-right 400ms;
+    -o-transition: padding-right 400ms;
+}
+
+  &__name {
     width: 100%;
     height: auto;
-    margin: $margin-elements;
-    display: flex;
-    flex-direction: row;
+    padding-left: 1rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
-    align-items: center;
+  &__details {
+    width: 100%;
+    height: auto;
+    padding-left: 1rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__price {
+    display: inline-block;
+    position: absolute;
+    right: 2rem;
+    bottom: 1rem;
+    width: 1rem;
+    height: 1rem;
+    transition: transform 500ms ease-in-out;
+    -webkit-transition: transform 500ms ease-in-out;
+    -moz-transition: transform 500ms ease-in-out;
+    -ms-transition: transform 500ms ease-in-out;
+    -o-transition: transform 500ms ease-in-out;
   }
 
   &__check {
-    z-index: 2;
-    width: 4rem;
-    height: 4rem;
+    width: 5rem;
+    height: 100%;
+    position: absolute;
+    right: -0.1rem;
+    background-color: $colour-tertiary;
+    border: none;
+    transform-origin: right;
+    transform: scaleX(0);
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transition: transform 500ms ease-in-out;
+    -webkit-transition: transform 500ms ease-in-out;
+    -moz-transition: transform 500ms ease-in-out;
+    -ms-transition: transform 500ms ease-in-out;
+    -o-transition: transform 500ms ease-in-out;
+  }
+
+  .menu__selection:hover &__price {
+    transform: translate(-5rem);
+    -webkit-transform: translate(-5rem);
+    -moz-transform: translate(-5rem);
+    -ms-transform: translate(-5rem);
+    -o-transform: translate(-5rem);
+  }
+
+  .menu__selection:hover &__container-selection {
+    padding-right: 10rem;
+  }
+
+  .menu__selection:hover &__check {
+    transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+  }
+
+  .fa-circle-check {
+    display: inline-block;
     display: flex;
     align-items: center;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    font-size: 2rem;
+    transform: rotate (0);
+    -webkit-transform: rotate (0);
+    -moz-transform: rotate (0);
+    -ms-transform: rotate (0);
+    -o-transform: rotate (0);
+    transition: transform 500ms ease-in-out;
+    -webkit-transition: transform 500ms ease-in-out;
+    -moz-transition: transform 500ms ease-in-out;
+    -ms-transition: transform 500ms ease-in-out;
+    -o-transition: transform 500ms ease-in-out;
+    color: white;
   }
- 
+
+  .menu__selection:hover .fa-circle-check {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+  }
+
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  position: relative;
 }
