--- a/main.css
+++ b/main.css
@@ -204,12 +204,12 @@ h3 {
   rotate: 45deg;
   background: linear-gradient(to right bottom, rgb(147, 86, 220), 70%, #FF79DA);
 }
-.restaurant-like:hover + .restaurant-like__after {
-  transform: scale(0.5);
-  -webkit-transform: scale(0.5);
-  -moz-transform: scale(0.5);
-  -ms-transform: scale(0.5);
-  -o-transform: scale(0.5);
+.restaurant-like:active + .restaurant-like__after {
+  transform: scale(0.45);
+  -webkit-transform: scale(0.45);
+  -moz-transform: scale(0.45);
+  -ms-transform: scale(0.45);
+  -o-transform: scale(0.45);
 }
 
 .btn {
@@ -785,12 +785,14 @@ footer {
   border-bottom: solid 0.3rem #99E2D0;
 }
 .menu__selection {
+  position: relative;
+  top: 2rem;
   display: flex;
   flex-direction: row;
   width: auto;
   height: 5rem;
   padding: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   box-shadow: 0.5rem 0.2rem 1rem rgb(202, 198, 198);
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -868,17 +870,17 @@ footer {
   -ms-transition: transform 500ms ease-in-out;
   -o-transition: transform 500ms ease-in-out;
 }
-.menu__selection:hover .menu__price {
+.menu__selection:active .menu__price {
   transform: translate(-5rem);
   -webkit-transform: translate(-5rem);
   -moz-transform: translate(-5rem);
   -ms-transform: translate(-5rem);
   -o-transform: translate(-5rem);
 }
-.menu__selection:hover .menu__container-selection {
+.menu__selection:active .menu__container-selection {
   padding-right: 10rem;
 }
-.menu__selection:hover .menu__check {
+.menu__selection:active .menu__check {
   transform: scaleX(1);
   -webkit-transform: scaleX(1);
   -moz-transform: scaleX(1);
@@ -905,7 +907,7 @@ footer {
   -o-transition: transform 500ms ease-in-out;
   color: white;
 }
-.menu .menu__selection:hover .fa-circle-check {
+.menu .menu__selection:active .fa-circle-check {
   transform: rotate(360deg);
   -webkit-transform: rotate(360deg);
   -moz-transform: rotate(360deg);
