--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -92,12 +92,14 @@
   }
 
   &__selection {
+    position:relative;
+    top: 2rem;
     display: flex;
     flex-direction: row;
     width: auto;
     height: 5rem;
     padding: 0;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     @include initial-shadow-element;
     border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -181,7 +183,7 @@
     -o-transition: transform 500ms ease-in-out;
   }
 
-  .menu__selection:hover &__price {
+  .menu__selection:active &__price {
     transform: translate(-5rem);
     -webkit-transform: translate(-5rem);
     -moz-transform: translate(-5rem);
@@ -189,11 +191,11 @@
     -o-transform: translate(-5rem);
   }
 
-  .menu__selection:hover &__container-selection {
+  .menu__selection:active &__container-selection {
     padding-right: 10rem;
   }
 
-  .menu__selection:hover &__check {
+  .menu__selection:active &__check {
     transform: scaleX(1);
     -webkit-transform: scaleX(1);
     -moz-transform: scaleX(1);
@@ -222,7 +224,7 @@
     color: white;
   }
 
-  .menu__selection:hover .fa-circle-check {
+  .menu__selection:active .fa-circle-check {
     transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
