Revert "-dans button__like.scss : changement du "hover" par "active" pour faire apparaître l'animation au click sur version mobile,"
This reverts commit 457ab0abef306dc21031f42d0dd57532616dd1e2.

--- a/sass/components/_button_like.scss
+++ b/sass/components/_button_like.scss
@@ -69,12 +69,12 @@
         background: linear-gradient(to right bottom, rgb(147, 86, 220, 1), 70%, #FF79DA);
     }
 
-    &:active+&__after {
-        transform: scale(0.45);
-        -webkit-transform: scale(0.45);
-        -moz-transform: scale(0.45);
-        -ms-transform: scale(0.45);
-        -o-transform: scale(0.45);
-}
+    &:hover+&__after {
+        transform: scale(0.5);
+        -webkit-transform: scale(0.5);
+        -moz-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+        -o-transform: scale(0.5);
+    }
 
 }
