Revert "-modifications dans index.html : div au lieu de h1 pour le logo, h1 au lieu de h2 pour "présentation-heading", création d'une div "container-restaurant_cards pour englober toutes les cartes et permettre de les disposer avec flex, et mise en forme du document;"
This reverts commit fe6723ea32fae78168510aa61d6be57e818d6f2d.

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,30 +11,24 @@ h2{
     font-size: 1.5rem;
     font-weight: 700;
 
-   
+    @include tablette-only {
+        font-size: 1.2rem;
+    }
 }
 
 h3 {
-    font-size:1.1rem;
     font-weight: 700;
 }
+
 
 .logo{
     font-family:'Shrikhand', 'Robot', sans-serif;
     font-size: 2rem;
-    
-    @include small-mobile-only {
-        font-size: 1.3rem;
-      }
 }
 
-.main-container__heading h1{
+.card-container__heading h1{
 font-family:'Shrikhand', 'Robot', sans-serif;
 font-size: 1.8rem;
-
-   @include small-mobile-only {
-        font-size: 1.3rem;
-      }
 }
 
 .menu__heading{
