--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -66,7 +66,7 @@
         flex-wrap: wrap;
         flex-direction: row;
         margin: 0;
-        padding: 1rem 1rem 5rem 1rem;
+        padding: 1rem;
         background-color: $colour-secondary;
     }
 
@@ -191,11 +191,11 @@
         width: auto;
         height: auto;
 
+
         @include tablette-only {
             flex-direction: row;
             flex-wrap: wrap; 
-            gap: 10px;
-            padding: 3.875rem 0 3.875rem 0;       
+            gap: 10px;       
         }
 
     }
@@ -207,7 +207,7 @@
         margin: $margin-elements;
 
         @include tablette-only {
-            margin: 0;
+            margin: 0 0 0 4rem;
         }
 
         @include desktop-only {
@@ -234,14 +234,12 @@
 
     @include tablette-only {
         align-items: flex-end;
-        width: 45%;
-        margin: 0.2rem;
+        width: 40%;
     }
 
     @include desktop-only {
         width: 40%;
         height: 350px;
-        margin:1rem;
     }
 
     &:hover {
@@ -273,9 +271,10 @@
         -o-border-radius: $border-card;
 
         @include desktop-only {
+   
+                margin: 0;
         width: auto;
-        height: 350px;  
-        margin: 0;
+            height: 350px;
         }
     }
 
@@ -314,11 +313,13 @@
         -moz-border-radius: 0 0 20px 20px;
         -ms-border-radius: 0 0 20px 20px;
         -o-border-radius: 0 0 20px 20px;
+
     }
 
 }
 
 .restaurant-like {
+
     position: absolute;
     right: 2rem;
     bottom: 1.1rem;
@@ -327,6 +328,7 @@
         position: fixed;
         right: 2rem;
         bottom: 1rem;
+
     }
 
 }
