-changements dans menu_the_delite_of_the_senses.html : insertion de l'image du restaurant, modifications de la structure et des noms des classes pour intégrer l'animation "check"; -fichier menu_the_enchanted_note.html complété de l'image du restaurant, de la partie main et du footer; -changements dans typography.scss : insertion des breakpoints pour les mobiles de petite taille afin d'ajuster l’espacement des titres et logos par rapport aux icones, suppression de la version tablette pour les h2 (le rendu était trop petit); -modification de l'inclinaison de la graduation sur le background : passe à l'horizontal; -changements dans home_page.scss : augmentation du padding-bottom  dans le selecteur « functioning » en version tablette pour aligner ses éléments en face des cartes , ajout d'un padding sur les cartes en version tablette, marge mise à 0 sur le "heading" des cartes en version tablettes, ajustement de la taille des cartes avec insertion d'une marge pour la version tablette, rajout d'une marge en version desktop , indication d'une hauteur de 350 px dans le conteneur "restaurant__card en version desktop pour optimiser l’espace remplit par les cartes; -changements dans le fichier menu_scss :  précision de height auto pour le header, application de la propriété flex sur la partie main avec ajout d'un padding-bottom pour ajuster sa distance vis-à-vis du footer, précision sur la position du main pour les petites versions de mobiles avec un breakpoint permettant de coller l'image à la partie main, ajustement du positionnement de l'image, modification du point de départ haut de l'icone "heart", modification des propriétés de la partie menu  suite aux changement de structure et de class dans le html, intégration de l'animation "chekc", applicatio de la propriété flex sur le bouton "commander" pour le centrer et précision de la position relative sur le footer pour ajuster et garder sa place, changement de « hover » par « active » pour mettre en action l’animation du che

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,37 +1,43 @@
-body{
-    font-family:'Roboto', sans-serif;
+body {
+    font-family: 'Roboto', sans-serif;
     line-height: 130%;
 }
 
 h1 {
-    font-size:1.5rem;
+    font-size: 1.5rem;
 }
 
-h2{
+h2 {
     font-size: 1.5rem;
     font-weight: 700;
 
-    @include tablette-only {
-        font-size: 1.2rem;
-    }
+
 }
 
 h3 {
+    font-size: 1.1rem;
     font-weight: 700;
 }
 
-
-.logo{
-    font-family:'Shrikhand', 'Robot', sans-serif;
+.logo {
+    font-family: 'Shrikhand', 'Robot', sans-serif;
     font-size: 2rem;
+
+    @include small-mobile-only {
+        font-size: 1.3rem;
+    }
 }
 
-.card-container__heading h1{
-font-family:'Shrikhand', 'Robot', sans-serif;
-font-size: 1.8rem;
+.main-container__heading h1 {
+    font-family: 'Shrikhand', 'Robot', sans-serif;
+    font-size: 1.8rem;
+
+    @include small-mobile-only {
+        font-size: 1.3rem;
+    }
 }
 
-.menu__heading{
+.menu__heading {
     font-size: 1.2rem;
     font-weight: 300;
 }
