--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -107,8 +107,6 @@
     background-color: white;
     cursor: pointer;
     overflow: hidden;
-
-
   }
 
   &__selection:active &__price {
@@ -120,7 +118,7 @@
   }
 
   &__selection:active &__container-selection {
-    padding-right: 10rem;
+    padding-right: 8rem;
   }
 
   &__selection:active &__check {
@@ -138,7 +136,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-right: 4rem;
+    padding-right: 0rem;
     border-radius: 0 10px 10px 0;
     -webkit-border-radius: 0 10px 10px 0;
     -moz-border-radius: 0 10px 10px 0;
@@ -181,6 +179,9 @@
     -moz-transition: transform 500ms ease-in-out;
     -ms-transition: transform 500ms ease-in-out;
     -o-transition: transform 500ms ease-in-out;
+
+    @include small-mobile-only {
+      right: 1rem;}
   }
 
   &__check {
