--- a/main.css
+++ b/main.css
@@ -227,7 +227,7 @@ h3 {
   rotate: 45deg;
   background: linear-gradient(to right bottom, rgb(147, 86, 220), 70%, #FF79DA);
 }
-.restaurant-like:hover + .restaurant-like__after {
+.restaurant-like:active + .restaurant-like__after {
   transform: scale(0.5);
   -webkit-transform: scale(0.5);
   -moz-transform: scale(0.5);
@@ -750,6 +750,7 @@ footer {
   width: 100%;
   height: auto;
   padding-bottom: 13rem;
+  margin-bottom: 3.75rem;
   background-color: rgb(252, 246, 246);
   border-radius: 25px 25px 0 0;
   -webkit-border-radius: 25px 25px 0 0;
