--- a/sass/components/_button_like.scss
+++ b/sass/components/_button_like.scss
@@ -69,7 +69,7 @@
         background: linear-gradient(to right bottom, rgb(147, 86, 220, 1), 70%, #FF79DA);
     }
 
-    &:hover+&__after {
+    &:active+&__after {
         transform: scale(0.5);
         -webkit-transform: scale(0.5);
         -moz-transform: scale(0.5);
