--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -28,6 +28,7 @@
   width: 100%;
   height: auto;
   padding-bottom: 13rem;
+  margin-bottom: 3.75rem;
   background-color: rgb(252, 246, 246);
   border-radius: 25px 25px 0 0;
   -webkit-border-radius: 25px 25px 0 0;
